<resources>
    <string name="app_name">PassPar2</string>

    <string name="emailaddress">adresse mail</string>
    <string name="password">mot de passe</string>
    <string name="forgotten_password">Mot de passe oublié ?</string>
    <string name="api_check">API appelée</string>
    <string name="missing_data">Données manquantes. Réessayez</string>
    <string name="missed_connexion">API introuvable</string>
    <string name="invalid_email">adresse mail invalide. Réessayez.</string>

    <string name="nouveau_compte_titre">Création de compte</string>
    <string name="nouveau_compte_titre2">Informations générales</string>
    <string name="nouveau_compte_titre2_2">Adresse personnelle</string>
    <string name="nouveau_compte_suivant">Suivant</string>
    <string name="nouveau_compte_connecter">Se connecter</string>
    <string name="nouveau_compte_inscrire">S\'inscrire</string>
    <string name="nouveau_compte_retour">Retour</string>

    <!-- Ensemble des strings pour la partie 1 de la création de compte-->
    <string name="nouveau_compte_placeholder_nom">Nom</string>
    <string name="nouveau_compte_placeholder_prenom">Prenom</string>
    <string name="nouveau_compte_placeholder_mail">Adresse mail</string>
    <string name="nouveau_compte_placeholder_mdp">Mot de passe</string>

    <!-- Ensemble des strings pour la partie 2 de la création de compte-->
    <string name="nouveau_compte_placeholder_pays">Pays</string>
    <string name="nouveau_compte_placeholder_ville">Ville</string>
    <string name="nouveau_compte_placeholder_code_postal">Code postal</string>
    <string name="nouveau_compte_placeholder_rue">Rue</string>
    <string name="nouveau_compte_placeholder_complement">Complément</string>

    <string name="nouveau_compte_onglet_parcours">Parcours</string>
    <string name="nouveau_compte_onglet_details">Details</string>

    <string name="menu_compte">Mon compte</string>
    <string name="menu_clients">Mes clients</string>
    <string name="menu_itineraire">Mes itinéraires</string>
    <string name="menu_parcours">Mes parcours</string>
    <string name="gestion_clients_titre">Mes clients</string>
    <string name="clients_ajouter">Ajouter un client</string>

    <string name="nouveau_client_titre">Créer un nouveau client</string>
    <string name="nouveau_client_titre2">Informations générales</string>
    <string name="nouveau_client_placeholder_nom">Nom de l\'entreprise cliente *</string>
    <string name="nouveau_client_placeholder_description">Description *</string>
    <string name="nouveau_client_titre3">Adresse</string>
    <string name="nouveau_client_placeholder_complement">Complément d\'adresse</string>
    <string name="nouveau_client_placeholder_rue">Nom de rue *</string>
    <string name="nouveau_client_placeholder_code_postal">Code postal *</string>
    <string name="nouveau_client_placeholder_ville">Ville *</string>
    <string name="nouveau_client_placeholder_pays">Pays *</string>
    <string name="nouveau_client_titre4">Contact</string>
    <string name="nouveau_client_placeholder_telephonecontact">Telephone du contact *</string>
    <string name="nouveau_client_placeholder_prenomcontact">Prénom du contact *</string>
    <string name="nouveau_client_placeholder_nomcontact">Nom du contact *</string>
    <string name="nouveau_client_valider">Valider</string>
    <string name="nouveau_client_annuler">Annuler</string>

    <string name="confirm">Valider</string>
    <string name="check_button">Valider</string>
    <string name="create_route">Créer un itinéraire</string>
    <string name="search_text">Rechercher</string>
    <string name="no_enterprises_founded">Veuillez créer une entreprise</string>

    <string name="account_modifier">Modifier</string>

    <string name="detail">Détail</string>
    <string name="detail_client_contacts">Contacts</string>
    <string name="contacts_edit_title">Modifier un contact</string>
    <string name="contacts_cancel">Annuler</string>
    <string name="contacts_validate">Valider</string>
    <string name="contacts_placeholder_phone">Telephone du contact</string>
    <string name="contacts_placeholder_firstName">Prenom du contact</string>
    <string name="contacts_placeholder_lastName">Nom du contact</string>

    <string name="account_edit_client">Modifier vos informations</string>
    <string name="account_edit_complement">Complement d\'adresse</string>
    <string name="account_edit_rue">Rue</string>
    <string name="account_edit_codepostal">Code postal *</string>
    <string name="account_edit_ville">Ville *</string>
    <string name="account_edit_pays">Pays *</string>
    <string name="account_edit_motdepasse">Renseigner pour modifier</string>
    <string name="account_edit_email">Email *</string>
    <string name="account_edit_prenom">Prenom *</string>
    <string name="account_edit_nom">Nom *</string>
    <string name="menu_message_already_customers">Déjà sur la page \"Clients\"</string>
    <string name="menu_message_already_itineraries">Déjà sur la page \"Itinéraires\"</string>
    <string name="menu_message_already_path">Déjà sur la page \"Parcours\"</string>
    <string name="menu_message_already_account">Déjà sur la page \"Compte\"</string>

    <string name="detail_client_modifier">Modifier</string>
    <string name="customers_edit_title">Modifier un client</string>

    <string name="available_enterprises">Clients disponibles :</string>
    <string name="itineraries_create">Créer un itinéraire</string>
    <string name="nouveau_client_checkbox_prospect">Cocher s\'il s\'agit d\'un prospect</string>
    <string name="nouveau_contact_titre">Créer un nouveau contact</string>
    <string name="detail_client_add">Ajouter un contact</string>
    <string name="edit_route">Modifier un itinéraire</string>
    <string name="itinerary_details">Details de l\'itineraire</string>
    <string name="itinerary_entreprises">Liste des clients/prospects :</string>
    <string name="use_as_course_button">Mettre en tant que parcours</string>
    <string name="course_details">Détails du parcours</string>
    <string name="course_name">Nom du parcours</string>
    <string name="nouveau_compte_onglet_selection">Sélection</string>
    <string name="pause_course_button">Mettre en pause le parcours</string>
    <string name="stop_course_button">Stopper le parcours</string>
    <string name="saved_courses">Voir les parcours sauvegardés</string>
    <string name="retake_course">Reprendre le parcours</string>
</resources>