<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="Accueil_fragment_parcours">

    <LinearLayout
    android:id="@+id/clients_creer"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#000000"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:logo="@drawable/logo_passpar2"
            app:titleTextColor="#FFFFFF" />

        <TextView
            android:id="@+id/contact_titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/marge_verticale"
            android:layout_gravity="center"
            android:textSize="@dimen/taille_titre"
            android:textColor="@color/white"
            android:text="@string/nouveau_contact_titre" />

        <EditText
            android:id="@+id/create_contact_lastName"
            android:maxLines="1"
            android:maxLength="35"
            android:inputType="text"
            style="@style/nouveau_compte_saisie"
            android:hint="@string/nouveau_client_placeholder_nomcontact" />

        <EditText
            android:id="@+id/create_contact_firstName"
            android:maxLines="1"
            android:maxLength="35"
            android:inputType="text"
            style="@style/nouveau_compte_saisie"
            android:hint="@string/nouveau_client_placeholder_prenomcontact" />

        <EditText
            android:id="@+id/create_contact_phone"
            android:maxLines="1"
            android:maxLength="10"
            android:inputType="text"
            style="@style/nouveau_compte_saisie"
            android:hint="@string/nouveau_client_placeholder_telephonecontact" />

        <!-- Espaceur pour pousser les boutons vers le bas -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_contact_validate"
            style="@style/nouveau_compte_suivant"
            android:text="@string/nouveau_client_valider"
            android:onClick="clicValider"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_contact_cancel"
            style="@style/nouveau_compte_retour"
            android:text="@string/nouveau_client_annuler"
            android:onClick="clicAnnuler"
            android:layout_marginBottom="45dp" />

    </LinearLayout>

</LinearLayout>
