<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewRouteActivity"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_left"
                android:background="@color/black"
                app:tint="@android:color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_route"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:hint="@string/search_text"
            android:textColorHint="@color/white"
            android:textSize="15dp"/>
        <ListView
            android:id="@+id/enterpriselist"
            android:layout_width="match_parent"
            android:layout_height="400dp"/>
        <TextView
            android:id="@+id/displayed_enterprises"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/green"
            android:text="@string/check_button"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>